--- a/modelos_de_volatilidad.Rmd
+++ b/modelos_de_volatilidad.Rmd
@@ -14,10 +14,12 @@ output:
   pdf_document:
     fig_caption: true
     number_sections: true
+    
 editor_options: 
   chunk_output_type: console
 geometry:
   margin = 2.5cm
+urlcolor: blue
 ---
 
 \tableofcontents
@@ -32,6 +34,7 @@ library(fBasics)
 library(urca)
 library(forecast)
 library(rugarch)
+library(fTrading)
 ```
 
 # Abstract
@@ -44,11 +47,10 @@ MAKE REFERENCES BETWEEN PLOTS (NUMBERS AND CITATIONS IN TEXT, bookdown is necess
 Describe
 
 * Scenario and objective of the work. What will be analyzed. 
-* Precise description of variable (NASDAG Composite) used in the analysis and description of where the data is gathered from (Yahoo Finance)
+* Precise description of variable (NASDAQ Composite) used in the analysis and description of where the data is gathered from (Yahoo Finance)
 * Summary of structure of the work (description of what is done in each part)
 
-https://finance.yahoo.com/quote/%5EIXIC?p=%5EIXIC
-
+The data is gathered directly from Yahoo Finance and can be found [here](https://finance.yahoo.com/quote/%5EIXIC?p=%5EIXIC).
 
 \newpage
 # Empirical Application
@@ -243,13 +245,14 @@ pnorm(c(abs(model6$coef)/sqrt(diag(model6$var.coef))), mean=0, sd=1, lower.tail=
 model7 <- arima(rendixic, order = c(3,0,0),include.mean = TRUE)
 model7
 pnorm(c(abs(model7$coef)/sqrt(diag(model7$var.coef))), mean=0, sd=1, lower.tail=FALSE)
-# Hva betyr p-verdier på 0e+00???
 
 #MA(3)
 model8 <- arima(rendixic, order = c(0,0,3),include.mean = TRUE)
 model8
 pnorm(c(abs(model8$coef)/sqrt(diag(model8$var.coef))), mean=0, sd=1, lower.tail=FALSE)
 ```
+
+Note that all models we have estimated here have significant coefficient estimates to a predetermined significance level of $\alpha = 0.05$.
 
 ```{r, echo = F}
 models <- c("AR(1)", "MA(1)", "ARMA(1,1)", "AR(2)", "MA(2)", "ARMA(2,2)", "AR(3)", "MA(3)") 
@@ -259,9 +262,7 @@ df.arma <- cbind("Model" = models, "BIC" = bics, "AIC" = aics)
 knitr::kable(df.arma, caption = "AIC and BIC of different estimated models for the returns of NASDAQ Composite")
 ```
 
-HVA BETYR P-VERDIER PÅ 0.000e+00? DETTE FÅR JEG FOR ARMA(2,2)!! SE NEDENFOR!
-
-The table above clearly shows that ARMA(2,2) yields the lowest AIC and BIC. Moreover, the estimated coefficients of the model are significant to a level of $0.05$. SIKKER!?!? The estimated model is shown below
+The table above clearly shows that ARMA(2,2) yields the lowest AIC and BIC. Moreover, as noted, the estimated coefficients of the model are significant to a level of $0.05$. The estimated model ARMA(2,2) is shown below
 
 ```{r}
 mean.model <- arima(rendixic, order = c(2,0,2),include.mean = TRUE)
@@ -269,11 +270,10 @@ mean.model
 pnorm(c(abs(mean.model$coef)/sqrt(diag(mean.model$var.coef))), mean=0, sd=1, lower.tail=FALSE)
 ```
 
-Some model diagnostics follow. We must check if the model is stationary. 
+Some model diagnostics have to be done to check if the model is adequate. We must check if the model is stationary. 
 
 ```{r}
 plot(mean.model)
-plot(model3) # Or just use model3, because of parsimony? The AIC is much larger though. 
 ```
 
 The inverse roots of the characteristic polynomial of AR and MA are shows above. DO WE WANT ALL OF THE INVERSE ROOTS TO FALL INSIDE, FOR BOTH THE AR AND THE MA PROCESS? The stationarity condition for the AR-process is satisfied, since the roots have absolute values greater than one. Moreover, the invertibility condition holds for the MA process, since the roots of this process also have absolute values greater than one. Thus, the model is stationary. 
@@ -281,32 +281,24 @@ The inverse roots of the characteristic polynomial of AR and MA are shows above.
 The residuals of the model are analyzed below. 
 
 ```{r}
-# Denne kodeblokken trengs kanskje ikke?
 tsdiag(mean.model)
-tsdiag(model3) # Or just use model3, because of parsimony?
 ```
 
 There are no significant coefficients in the autocorrelation function above, which suggests that the model has adequately captured the information in the data. Moreover, the Ljung-Box statistic p-values are all relatively large, which means that we will not reject the Ljung-Box null hypothesis that all $m$ of the correlation coefficients are simultaneously equal to zero. Thus, this further suggests that the residuals are not correlated and we have found a model that seems reasonable in this regard. 
 
-```{r}
-par(mfrow=c(1,2),font=2,font.lab=4,font.axis=2,las=1)
-acf(mean.model$residuals,ylim=c(-1,1),main="residuals, arma(2,2)")
-pacf(mean.model$residuals,ylim=c(-1,1),main="residuals, arma(2,2)")
-```
-
-The same conclusion is made from the ACF and PACF plotted above. 
+Next, a QQ-plot of the residuals, and the residuals themselves (not standardized), is plotted.
 
 ```{r}
+par(mfrow = c(1,1),font=2,font.lab=4,font.axis=2,las=1)
 qqnorm(mean.model$residuals)
 qqline(mean.model$residuals, datax = FALSE)
-
 
 plot(mean.model$residuals)
 title (main="Residuals")
 normalTest(mean.model$residuals,method="jb")
 ```
 
-A QQ-plot of the residuals is plotted below, followed by the residuals (not standardized) are plotted above. It is apparent that the residuals have heavy tails. It is not reasonable to assume normality of the residuals, an argument that the Jarque-Bera Normality test further substantiates because its null hypothesis of normality is rejected following the very small p-value. 
+It is apparent that the residuals have heavy tails. It is not reasonable to assume normality of the residuals, an argument that the Jarque-Bera Normality test further substantiates because its null hypothesis of normality is rejected following the very small p-value. 
 
 ## Identification, Estimation and Diagnostics of a Model for the Variance
 
@@ -340,7 +332,7 @@ spec1 <- ugarchspec(variance.model = list(model = "sGARCH", garchOrder = c(1,1))
 m.AIC <- -6.4605
 ```
 
-We observe that all the parameter estimates are significant to a 5\% significance level. Moreover, we note that the condition of positivity holds, because $\hat{\alpha}_1 > 0$ and $\hat{\beta}_1$, where we follow the standard statistical notation of a hat indicating an estimate. Also, we note that the condition of stationarity holds, because $\hat{\alpha}_1 + \hat{\beta}_1 < 1$. We record the AIC of this first model in order to compare to other models later. The residual plots below show that the residuals do not present any autocorrelation (before moving to around 15 lags, which is a large number of lags), which indicates that this model has modeled the data in a sufficient or reasonable way. However, note that the p-values of the `Weighted Ljung-Box Test on Residuals` are large, which means we cannot reject the null hypothesis of no serial correlation for the different lags. We will keep this is mind as a downfall of this first proposed model. 
+We observe that all the parameter estimates are significant to a 5\% significance level. Moreover, we note that the condition of positivity holds, because $\hat{\alpha}_1 > 0$ and $\hat{\beta}_1 > 0$, where we follow the standard statistical notation of a hat indicating an estimate. Also, we note that the condition of stationarity holds, because $\hat{\alpha}_1 + \hat{\beta}_1 < 1$. We record the AIC of this first model in order to compare to other models later. The residual plots below show that the residuals do not present any autocorrelation (before moving to around 15 lags, which is a large number of lags), which indicates that this model has modeled the data in a sufficient or reasonable way. However, note that the p-values of the `Weighted Ljung-Box Test on Residuals` are large, which means we cannot reject the null hypothesis of no serial correlation for the different lags. We will keep this is mind as a downfall of this first proposed model. 
 
 ```{r}
 par(mfrow=c(1,2),font=2,font.lab=4,font.axis=2,las=1)
@@ -363,7 +355,7 @@ spec.mgjr <- ugarchspec(variance.model=list(model="gjrGARCH", garchOrder = c(1,1
 (mgjr <- ugarchfit(spec = spec.mgjr, data = rendixic))
 ```
 
-Still, the parameter estimates are significant (except for `omega`). The stationarity conditions holds, since $\hat{\alpha}_1 + \hat{\beta}_1 + \frac12 \hat{\gamma} \approx$ `r round(0.823974 + 0.5*0.260477, 3)` $<1$. However, the positivity condition does not seem to hold, since $\hat{\alpha} = 0 \ngeq 0$. Thus, the GJR-GARCH based model cannot be used, even though the AIC is lower and the residuals do not present any autocorrelation according to plots. 
+The stationarity conditions holds, since $\hat{\alpha}_1 + \hat{\beta}_1 + \frac12 \hat{\gamma} \approx$ `r round(0.823974 + 0.5*0.260477, 3)` $<1$. However, the positivity condition does not seem to hold, since $\hat{\alpha} = 0 \ngeq 0$. Thus, the GJR-GARCH based model will not be used, even though the AIC is lower and the residuals do not present any autocorrelation according to plots. Moreover, the several of the ARMA-parameter coefficient estimates are not significant to a reasonable level, which is the case no matter what `armaOrder` is use in the estimation. 
 
 <!-- The residuals for the second model are plotted below.  -->
 
@@ -382,10 +374,7 @@ Still, the parameter estimates are significant (except for `omega`). The station
 <!-- plot(rendixic)  -->
 <!-- ``` -->
 
-Next, we will fit an ARMA(2,2)-L-GARCH 
-NOT SURE HOW TO DO THIS YET. DOES NOT LOOK LIKE IT IS IMPLEMENTED!
-
-Next, we will fit an ARMA(2,2)-EGARCH model. All parameters are significant in the model. 
+Next, we will fit an ARMA(2,2)-EGARCH model. 
  
 ```{r}
 spec.egarch <- ugarchspec(variance.model = list(model="eGARCH", garchOrder = c(1,1)), mean.model = list(armaOrder=c(2,2)), distribution.model = "std")
@@ -393,13 +382,17 @@ spec.egarch <- ugarchspec(variance.model = list(model="eGARCH", garchOrder = c(1
 m.egarch.AIC <- -6.4958
 ```
 
-The residual plots below look good. Moreover, the AIC is smaller for this model compared to the first proposed model. Thus, I would prefer this model over the first model. 
+All estimated parameters are significant to a level of $\alpha = 0.05$. For this model, we do not require positivity of the GARCH parameter estimates. WHAT ABOUT STATIONARITY, DO WE REQUIRE THIS? The residual plots below do not show any autocorrelation before moving to a large number of lags, which is a good sign that the model has modelized the data adequately. Moreover, the AIC is smaller for this model compared to the first proposed model. Thus, I would prefer this model over the first model. Note that $\gamma > 0$, which should mean that the positive news have a larger effect on the news compared to the negative news, which does not make sense here, when looking at the news impact curve. THIS IS STRANGE, I DO NOT UNDERSTAND THIS!? ASK PROFE!
 
 ```{r}
 par(mfrow=c(1,2),font=2,font.lab=4,font.axis=2,las=1)
 plot(m.egarch, which = 10)
 plot(m.egarch, which = 11)
+par(mfrow=c(1,1),font=2,font.lab=4,font.axis=2,las=1)
+plot(m.egarch, which = 12)
 ```
+
+Next, we fit and ARMA(2,2)-IGARCH model. 
 
 ```{r}
 spec.igarch <- ugarchspec(variance.model=list(model="iGARCH", garchOrder = c(1,1)), mean.model=list(armaOrder=c(2,2)), distribution.model = "std")
@@ -407,7 +400,7 @@ spec.igarch <- ugarchspec(variance.model=list(model="iGARCH", garchOrder = c(1,1
 m.igarch.AIC <- -6.4602
 ```
 
-The residuals for the iGARCH look alright, but the AIC is lower for this model compared to the first proposed model. 
+The residuals for the iGARCH look alright, but the AIC is lower for the EGARCH based model. 
 
 ```{r}
 par(mfrow=c(1,2),font=2,font.lab=4,font.axis=2,las=1)
@@ -415,12 +408,11 @@ plot(m.igarch, which = 10)
 plot(m.igarch, which = 11)
 ```
 
-Thus, I would conclude that the best model out of the three fitted is the first one. 
+Thus, I would conclude that the best model out of the three fitted is the EGARCH based model. 
 
 # Grafic and Interpretation of the Estimated Series of Volatility
 
-The estimated series of volatility for the first model is shown below, together with the returns. 
-PERHAPS THE E-GARCH IS BETTER THEN!?
+The estimated (anualized) series of volatility for the ARMA(2,2)-EGARCH model is shown below, together with the returns. 
 
 ```{r}
 v <- sigma(m.egarch) 
@@ -430,13 +422,13 @@ plot(v_anualized)
 plot(rendixic) 
 ```
 
-The general behaviour seems to match relatively well, i.e. the movements in the two plots coincide relatively well.
+The general behaviour seems to match relatively well, i.e. the movements in the two plots coincide relatively well. Days with larger (absolute) returns go together with the days with larger estimated volatilities. 
 
 A comparison of the estimated volatilities and the absolute value of the returns is given below. 
 
 ```{r}
 returnsabs <- abs(rendixic)
-par(mfcol=c(2,1))  # Show volatility and returns
+par(mfrow=c(2,1),font=2,font.lab=4,font.axis=2,las=1)  # Show volatility and returns
 plot(v_anualized)
 plot(returnsabs) 
 ```
@@ -444,27 +436,145 @@ plot(returnsabs)
 They all seem to follow a similar pattern, which is a good sign, even though we cannot compare the absolute values of the data shown in the plots. 
 
 ```{r}
-par(mfrow = c(1,1))
+par(mfrow=c(1,1),font=2,font.lab=4,font.axis=2,las=1)
 time <-  data.frame(returnsabs, v)
 ts.plot(time,gpars= list(xlab="time", ylab=",", col = 1:ncol(time)))
 legend("topleft", c("returnsabs","v"), lty=c(1,1), col=c("black","red"), cex=0.6)
 ```
 
+THESE ARE ALL JUST DIFFERENT WAYS OF SEEING THE SAME RESULTS, REMOVE SOME OF THEM LATER!
+
 # Grafic and Interpretation of the News Impact Curve
 
-The news impact curve for our chosen model is shown below. Since the standard GARCH model does not take the leverage effect into effect, the news impact curve is symmetric. DETTE ER JO DUMT, MEN KAN JO IKKE BRUKE GJR-GARCH VIRKER DET SOM!? NOE ANNET JEG KAN GJØRE MED DETTE?
+The news impact curve for our chosen model is shown below. Since the standard GARCH model does not take the leverage effect into effect, the news impact curve is symmetric. 
 
 ```{r}
-par(mfrow=c(1,1))
+par(mfrow=c(1,2),font=2,font.lab=4,font.axis=2,las=1)
+nie <- newsimpact(z = NULL, m.egarch)
+plot(nie$zx, nie$zy, ylab=nie$yexpr, xlab=nie$xexpr, type="l", main = "News Impact Curve")
 ni <- newsimpact(z = NULL, m)
 plot(ni$zx, ni$zy, ylab=ni$yexpr, xlab=ni$xexpr, type="l", main = "News Impact Curve")
 ```
 
+The EGARCH based model takes the leverage effect into effect, which is the news impact curve is non-symmetric. This curve indicates that the volatility is impacted to a higher degree by negative news compared to the impact on the volatility following positive news, which seems to be increasingly small as the positivity of the news increases THIS IS VERY STRANGE!!
+
 # Volatility Predictions and Interpretations
 
+Below volatility are predicted while leaving out the last 10 observations when estimating the ARMA(2,2)-EGARCH model. The prediction is done 10 steps ahead into the future, first statically. 
 
+```{r}
+(m.egarch.pred <- ugarchfit(spec = spec.egarch, data = rendixic, out.sample = 10))
+forc <- ugarchforecast(m.egarch.pred, n.ahead=10, n.roll= 0) 
+show(forc)
+fpm(forc)
+
+par(mfrow=c(2,1),font=2,font.lab=4,font.axis=2,las=1)
+plot(forc, which = 1)
+plot(forc, which = 3)
+uncvariance(m.egarch.pred)^0.5
+```
+
+As we can see from the uppermost plot, these static predictions (for the mean) 10 steps ahead are relatively useless. ALSO LOOKS LIKE THE FORECAST OF THE VARIANCE WILL GO TOWARDS THE UNCONDITIONAL VARIANCE. NOT SURE IN WHAT SITUATIONS THIS SHOULD HAPPEN THOUGH, ASK PROFE PERHAPS!
+
+Next, let us predict 10 steps into the future with a rolling window. We reestimate the model at each time step and estimate one step into the future after each reestimation. After doing this 10 times, we have effectively predicted 10 days into the future. 
+
+```{r}
+forc2 <- ugarchforecast(m.egarch.pred, n.ahead=1, n.roll= 100)
+fpm(forc2)
+sigma(forc2) 
+fitted(forc2)
+
+par(mfrow=c(2,1),font=2,font.lab=4,font.axis=2,las=1)
+plot(forc2, which = 2)
+plot(forc2, which = 4)
+```
+
+The predictions are still lousy, as can be seen from the predictions of the mean in the uppermost plot. However, from the second plot, it looks like the predictions of the variance are somewhat following the same movements as the absolute value of the series; when the absolute value of the series hits a spike, the predictions of the volatility increase as well. 
+
+The same type of movement can be seen when predicting with a rolling window 100 steps into the future, where the results of this prediction is shown below. 
+
+```{r}
+(m.egarch.pred2 <- ugarchfit(spec = spec.egarch, data = rendixic, out.sample = 100))
+forc3 <- ugarchforecast(m.egarch.pred2, n.ahead=1, n.roll= 100)
+fpm(forc3)
+sigma(forc3) 
+fitted(forc3)
+
+par(mfrow=c(2,1),font=2,font.lab=4,font.axis=2,las=1)
+plot(forc3, which = 2)
+plot(forc3, which = 4)
+```
 
 # Calculations via Historical Volatility and EWMA
+
+Historical volatility given below. 
+
+```{r}
+par(mfrow=c(1,1),font=2,font.lab=4,font.axis=2,las=1)
+Fechas<-as.Date(rownames(zoo(IXIC)))
+Fechas<-Fechas[-1] # Eliminate the first date, since it was lost when calculating returns. 
+
+vol.hist20 <- SMA(rendixic^2, n=20) 
+Fechas2<-Fechas[21:2556] 
+plot(Fechas2, vol.hist20, type="l", ylab='variance', main='1 month moving average')
+
+
+# vol.hist80 <- SMA(rendibex^2, n=80) 
+# Fechas3<-Fechas[81:1563]
+# plot(Fechas3, vol.hist80, type="l", ylab='variance', main='4 month moving average')
+# 
+# vol.hist160 <- SMA(rendibex^2, n=160) 
+# Fechas4<-Fechas[161:1563]
+# plot(Fechas4, vol.hist160, type="l", ylab='variance', main='8 month moving average')
+# 
+# vol.hist240 <- SMA(rendibex^2, n=240) 
+# Fechas5<-Fechas[241:1563]
+# plot(Fechas5, vol.hist240, type="l", ylab='variance', main='1 year moving average')
+# 
+# par(mfrow=c(2,2), cex=0.6, mar=c(2,2,3,1))
+# plot(Fechas2, vol.hist20, type="l", ylab='variance', main='1 month moving average')
+# plot(Fechas3, vol.hist80, type="l", ylab='variance', main='4 month moving average')
+# plot(Fechas4, vol.hist160, type="l", ylab='variance', main='8 month moving average')
+# plot(Fechas5, vol.hist240, type="l", ylab='variance', main='1 year moving average')
+```
+
+
+```{r, eval = F}
+###################
+#Exponential Weighted Moving Average# 
+###################
+
+vol.ewma0.95 <- EWMA(rendibex^2, lambda = 0.05) # note: in EWMA lambda is actually 1-lambda
+plot(Fechas, vol.ewma0.95, type="l", ylab='variance', main='EWMA 0.95')
+
+vol.ewma0.75 <- EWMA(rendibex^2, lambda = 0.25) # note: in EWMA lambda is actually 1-lambda
+plot(Fechas, vol.ewma0.75, type="l", ylab='variance', main='EWMA 0.75')
+
+vol.ewma0.5 <- EWMA(rendibex^2, lambda = 0.5) # note: in EWMA lambda is actually 1-lambda
+plot(Fechas, vol.ewma0.5, type="l", ylab='variance', main='EWMA 0.5')
+
+vol.ewma0.25 <- EWMA(rendibex^2, lambda = 0.75) # note: in EWMA lambda is actually 1-lambda
+plot(Fechas, vol.ewma0.25, type="l", ylab='variance', main='EWMA 0.25')
+
+par(mfrow=c(2,2), cex=0.6, mar=c(2,2,3,1))
+plot(Fechas, vol.ewma0.95, type="l", ylab='variance', main='EWMA 0.95')
+plot(Fechas, vol.ewma0.75, type="l", ylab='variance', main='EWMA 0.75')
+plot(Fechas, vol.ewma0.5, type="l", ylab='variance', main='EWMA 0.5')
+plot(Fechas, vol.ewma0.25, type="l", ylab='variance', main='EWMA 0.25')
+
+dev.off()
+variance=v^2
+comparison = data.frame(variance, vol.ewma0.95)
+ts.plot(comparison,gpars= list(ylab=",", col = 1:ncol(comparison)))
+legend("topleft", c("GJR-GARCH","EWMA 0.95"), lty=c(1,1), col=c("black","red"))
+
+variance=v^2
+variance2=variance[21:1562]
+volhist=vol.hist20[1:1542]
+comparison = data.frame(variance2, volhist)
+ts.plot(comparison,gpars= list(ylab=",", col = 1:ncol(comparison)))
+legend("topleft", c("GJR-GARCH","1 month moving average"), lty=c(1,1), col=c("black","red"))
+```
 
 # Calculation and Interpretation of VaR 
 
